--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@stripe/stripe-js": "^8.0.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "googleapis": "^162.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "openai": "^6.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
